removed angular 6 version

--- a/client-v1/angular.json
+++ b/client-v1/angular.json
@@ -123,6 +123,10 @@
               "devServerTarget": "client-v1:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
     }
